shuffle cleaned data and scaled data

--- a/notebook/clean_and_scale.ipynb
+++ b/notebook/clean_and_scale.ipynb
@@ -664,11 +664,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "id": "1bec9613",
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = df.sample(frac=1, random_state=42).reset_index(drop=True)\n",
     "df.to_csv('../data/cleaned.csv', index=False, encoding='utf-8')"
    ]
   },
@@ -682,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "id": "2296f703",
    "metadata": {},
    "outputs": [],
@@ -699,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "id": "7b8a0fbf",
    "metadata": {},
    "outputs": [],
