Edit: to_millions -> to_billions

--- a/notebook/clean_and_scale.ipynb
+++ b/notebook/clean_and_scale.ipynb
@@ -343,12 +343,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "5adff607",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def to_millions(text):\n",
+    "def to_billions(text):\n",
     "    text = text.lower().strip()\n",
     "\n",
     "    ti = 0\n",
