Edit: to_millions -> to_billions

--- a/notebook/clean_and_scale.ipynb
+++ b/notebook/clean_and_scale.ipynb
@@ -368,12 +368,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "63164fcd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.gia_ban = df.gia_ban.apply(to_millions)"
+    "df.gia_ban = df.gia_ban.apply(to_billions)"
    ]
   },
   {
