Fix: Some wrong rows

--- a/notebook/clean_and_scale.ipynb
+++ b/notebook/clean_and_scale.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "id": "31bcb50a",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "id": "d088385f",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "4  810 triệu  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "id": "877ab077",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "id": "2c38be54",
    "metadata": {},
    "outputs": [
@@ -260,13 +260,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nhien_lieu: {'Máy xăng': 4755, 'Máy dầu': 727, 'Điện': 293, 'Hybrid': 122, 'Loại khác': 2, 'SUV': 1}\n",
+      "nhien_lieu: {'Máy xăng': 4755, 'Máy dầu': 727, 'Điện': 293, 'Hybrid': 122, 'Loại khác': 3}\n",
       "\n",
       "kieu_dang: {'SUV': 2084, 'Sedan': 1694, 'MPV': 563, 'Hatchback': 538, 'Bán tải': 298, 'Crossover': 258, 'Van/Minivan': 114, 'Xe tải': 96, 'Coupe': 28, 'Sport Car': 17, 'Convertible': 16, 'Minibus': 14, 'Wagon': 1, 'Special Purpose': 1}\n",
       "\n",
       "tinh_trang: {'Xe cũ': 4846, 'Xe mới': 1054}\n",
       "\n",
-      "hop_so: {'Số tự động': 5053, 'Số sàn': 843, 'Số hỗn hợp': 3, 'Nhập khẩu': 1}\n",
+      "hop_so: {'Số tự động': 5054, 'Số sàn': 843, 'Số hỗn hợp': 3}\n",
       "\n",
       "xuat_xu: {'Trong nước': 3054, 'Nhập khẩu': 2751}\n",
       "\n",
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "id": "6108b21d",
    "metadata": {},
    "outputs": [],
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "5adff607",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "63164fcd",
    "metadata": {},
    "outputs": [],
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "id": "be6c53f2",
    "metadata": {},
    "outputs": [
@@ -525,7 +525,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 59,
    "id": "44d6c50e",
    "metadata": {},
    "outputs": [],
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 65,
    "id": "22b0d8ed",
    "metadata": {},
    "outputs": [],
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 66,
    "id": "18c98e1e",
    "metadata": {},
    "outputs": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 67,
    "id": "08f20d69",
    "metadata": {},
    "outputs": [
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 68,
    "id": "e3d4a010",
    "metadata": {},
    "outputs": [],
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 69,
    "id": "0f46faf5",
    "metadata": {},
    "outputs": [
@@ -653,7 +653,7 @@
        "Name: so_km, dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 70,
    "id": "1bec9613",
    "metadata": {},
    "outputs": [],
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 71,
    "id": "2296f703",
    "metadata": {},
    "outputs": [],
@@ -700,12 +700,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 72,
    "id": "7b8a0fbf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_scaled.to_csv('../data/scaled.csv')"
+    "df_scaled.to_csv('../data/scaled.csv', encoding='utf-8', index=False)"
    ]
   }
  ],
