Add: Data visualization

--- a/notebook/clean_and_scale.ipynb
+++ b/notebook/clean_and_scale.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 75,
    "id": "31bcb50a",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 76,
    "id": "2c38be54",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 77,
    "id": "6108b21d",
    "metadata": {},
    "outputs": [],
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 78,
    "id": "5adff607",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 79,
    "id": "63164fcd",
    "metadata": {},
    "outputs": [],
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 80,
    "id": "44d6c50e",
    "metadata": {},
    "outputs": [],
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 81,
    "id": "22b0d8ed",
    "metadata": {},
    "outputs": [],
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 82,
    "id": "08f20d69",
    "metadata": {},
    "outputs": [
@@ -620,6 +620,7 @@
     "\n",
     "plt.figure(figsize=(8, 5))\n",
     "plt.boxplot(df.so_km.drop(df.so_km.idxmax()), vert=False)\n",
+    "plt.savefig('../img/so_km_boxplot.png', dpi=450)\n",
     "plt.show()"
    ]
   },
@@ -700,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "7b8a0fbf",
    "metadata": {},
    "outputs": [],
